# 0vbbElectronics

./: .gitignore  19T20.txt  3x1NTD.txt  Makefile  README.md  SubDirScanner.sh  TDMS2CSV.sh  dataploter.sh  output.root  outputFit.root  outputFuAnQuXian.root  plotGraph.C  testFit.root  wrapUp.sh
data/: Resistance_measurement.md
data/2023Dec/: FJYRTPlot.root  (+4 more)
doc/: Resistance_measurement.md  doc.tmp
include/: ROOTDataPlotter.hpp  ROOTDataSaver.hpp  ROOTDataScaledPlotter.hpp  TTreePlotter.hpp  convert2TTree.hpp  flagHandler.hpp  markdownFileInput.hpp  markdownTableAnalyzer.hpp  markdownTableDataExtractor.hpp  subDirScanner.hpp
macro/: EasyDraw.cpp  EasyDraw.snippet.cpp  EasyDraw.txt
output/: RTCurve.xlsx  Resistance_measurement.md  outputFit.root  testFit.root  ~$RTCurve.xlsx
src/: CMakeLists.txt  CMakePresets.json  plotGraph.C  plotSinGraph.C
src/MatlabCode/: 4_RES_PLOT.fig  ItalianDAQtest.m  Mide_Spectrogram.m  PSD_pwelch.asv  PSD_pwelch.m  PSD_pwelch_4ROW.asv  PSD_pwelch_4ROW.m  PSD_readout.m  Spectrogram.asv  Spectrogram.m  XmlToCSVlog.asv  XmlToCSVlog.m  csv2sound.m  pileup.m  plot_Spectrogram.m  plot_psd.m  poly_fit.m  poly_fit_mlx.mlx  polyfit_m.m  scalogram_m.m  timedomin.m
src/QHarmonicSubtraction/: CMakeLists.txt  QHarmonicSubtraction.cpp
src/archived/: plotGraph.cpp  plotSinGraph.cpp  test.sh
src/dataConverter/: CMakeLists.txt  TDMSdataConverter.jl  TTreeFFTPlotter.cpp  TTreePlotter.cpp  convert2TTree.cpp  dataConverter.cpp  flagHandler.cpp  subDirScanner.cpp
src/dateCategorize/: dateCategorize.cpp
src/electronicsData/: Draw  Makefile  draw.C  drawFuAnCurve.cpp  extractXLS.py  fitVAGraph.cpp  readXLSdraw.sh  saveVAGraph.cpp
src/plotMerge/: mergeplot.cpp
src/plotRTrecording/: CMakeLists.txt  ROOTDataPlotter.cpp  ROOTDataSaver.cpp  markdownFileInput.cpp  markdownTableAnalyzer.cpp  markdownTableDataExtractor.cpp  plot.ipynb  plotRTrecording.cpp
(+47 files in other folders)
